<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textBox"
        android:layout_width="321dp"
        android:layout_height="112dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        android:text="@string/textBox"
        android:textAlignment="textEnd"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="27dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toStartOf="@+id/zero"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <Button
        android:id="@+id/enter"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="36dp"
        android:text="@string/enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nine" />

    <Button
        android:id="@+id/six"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:text="@string/six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/three" />

    <Button
        android:id="@+id/zero"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:text="@string/zero"
        app:layout_constraintEnd_toStartOf="@+id/enter"
        app:layout_constraintTop_toBottomOf="@+id/eight" />

    <Button
        android:id="@+id/one"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="28dp"
        android:text="@string/one"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/textBox" />

    <Button
        android:id="@+id/five"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:text="@string/five"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintTop_toBottomOf="@+id/two" />

    <Button
        android:id="@+id/three"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="36dp"
        android:text="@string/three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBox" />

    <Button
        android:id="@+id/two"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="32dp"
        android:text="@string/two"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintTop_toBottomOf="@+id/textBox" />

    <Button
        android:id="@+id/seven"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="28dp"
        android:text="@string/seven"
        app:layout_constraintEnd_toStartOf="@+id/eight"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <Button
        android:id="@+id/nine"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="36dp"
        android:text="@string/nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/six" />

    <Button
        android:id="@+id/eight"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:text="@string/eight"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintTop_toBottomOf="@+id/five" />

    <Button
        android:id="@+id/four"
        android:layout_width="90dp"
        android:layout_height="100dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:text="@string/four"
        app:layout_constraintEnd_toStartOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/one" />

</androidx.constraintlayout.widget.ConstraintLayout>